[TASK] Allow to Reset the orderNumber and invoiceNumber in the Cart Session
Related: #341

--- a/composer.json
+++ b/composer.json
@@ -58,12 +58,15 @@
         "test:typoscript:lint": [
             ".build/bin/typoscript-lint -c Build/typoscriptlint.yaml Configuration"
         ],
-        "test:all": [
-            "@test:cgl",
-            "@test:typoscript:lint",
+        "test:php": [
             "@test:php:lint",
             "@test:php:unit",
             "@test:php:functional"
+        ],
+        "test:all": [
+            "@test:cgl",
+            "@test:typoscript:lint",
+            "@test:php"
         ],
         "post-autoload-dump": [
             "mkdir -p .build/public/typo3conf/ext/",
