--- a/composer.json
+++ b/composer.json
@@ -60,10 +60,10 @@
     },
     "scripts": {
         "test:cgl": [
-            ".build/bin/php-cs-fixer fix --config=Build/.php_cs.dist -v --using-cache=no --path-mode=intersection ./"
+            ".build/bin/php-cs-fixer fix --config=Build/.php-cs-fixer.dist.php -v --using-cache=no --path-mode=intersection ./"
         ],
         "test:cgl:dry-run": [
-            ".build/bin/php-cs-fixer fix --config=Build/.php_cs.dist -v --dry-run --using-cache=no --path-mode=intersection ./"
+            ".build/bin/php-cs-fixer fix --config=Build/.php-cs-fixer.dist.php -v --dry-run --using-cache=no --path-mode=intersection ./"
         ],
         "test:php:lint": [
             ".build/bin/phplint -c Build/phplint.yaml"
