--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ script:
   - >
     echo;
     echo "Running php-cs-fixer";
-    .build/bin/php-cs-fixer fix --config=Build/.php_cs.dist -v --dry-run --using-cache=no --path-mode=intersection ./;
+    .build/bin/php-cs-fixer fix --config=Build/.php-cs-fixer.dist.php -v --dry-run --using-cache=no --path-mode=intersection ./;
 
   - >
     echo;
