--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ script:
   - >
     echo;
     echo "Running php-cs-fixer";
-    .Build/bin/php-cs-fixer fix --config=Build/.php_cs.dist -v --dry-run --using-cache=no --path-mode=intersection ./;
+    .Build/bin/php-cs-fixer fix --config=Build/.php-cs-fixer.dist.php -v --dry-run --using-cache=no --path-mode=intersection ./;
 
   - >
     echo;
