--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
         "friendsofphp/php-cs-fixer": "^2.14",
         "helmich/typo3-typoscript-lint": "^2.0",
         "overtrue/phplint": "^1.1",
-        "rector/rector": "^0.11"
+        "rector/rector": "^0.11",
+        "phpstan/phpstan": "^0.12.99"
     },
     "scripts": {
         "test:cgl": [
@@ -74,6 +75,9 @@
         "test:php:functional": [
             "typo3DatabaseDriver=\"pdo_sqlite\" .build/bin/phpunit -c Build/FunctionalTests.xml"
         ],
+        "test:phpstan:analyse": [
+            ".build/bin/phpstan analyse -c Build/phpstan.neon"
+        ],
         "test:rector:process": [
             ".build/bin/rector process *"
         ],
@@ -89,6 +93,7 @@
             "@test:php:functional"
         ],
         "test:all": [
+            "@test:phpstan:analyse",
             "@test:rector:process",
             "@test:cgl",
             "@test:typoscript:lint",
