--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,6 +74,12 @@ lint:php80:
   script:
     - find . -name \*.php -exec php -l "{}" \;
 
+lint:php81:
+  stage: lint
+  image: php:8.1-alpine
+  script:
+    - find . -name \*.php -exec php -l "{}" \;
+
 phpstan:analyse:
   image: composer:2
   stage: lint
@@ -154,11 +160,19 @@ test:php74:typo3_11:
     TYPO3_VERSION: ^11.5
     COVERAGE: 0
 
-# Build in PHP 7.4 and TYPO3 11.5
+# Build in PHP 8.0 and TYPO3 11.5
 test:php80:typo3_11:
   <<: *test_php
   variables:
     DOCKER_TAG: 8.0-alpine
+    TYPO3_VERSION: ^11.5
+    COVERAGE: 0
+
+# Build in PHP 8.1 and TYPO3 11.5
+test:php81:typo3_11:
+  <<: *test_php
+  variables:
+    DOCKER_TAG: 8.1-alpine
     TYPO3_VERSION: ^11.5
     COVERAGE: 1
 
