--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         }
     },
     "require": {
-        "php": "^7.2 || ^7.3 || ^7.4 || ^8.0 || ^8.1",
+        "php": "^7.2 || ^8.0",
         "ext-json": "*",
         "ext-openssl": "*",
         "typo3/cms-core": "^10.4 || ^11.5",
