[BUGFIX] Change Response in AddToCartFinisher for Forms in TYPO3 v11
Resolves: #396

--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,10 @@
         }
     },
     "config": {
+        "allow-plugins": {
+            "typo3/class-alias-loader": true,
+            "typo3/cms-composer-installers": true
+        },
         "bin-dir": ".build/bin",
         "vendor-dir": ".build/vendor"
     },
