--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ cache:
 
 variables:
   COMPOSER_CACHE_DIR: ".composer"
-  TYPO3_PATH_WEB: "$CI_PROJECT_DIR/.build/Web"
+  TYPO3_PATH_WEB: "$CI_PROJECT_DIR/.build/public"
   MYSQL_DATABASE: "typo3"
   MYSQL_ROOT_PASSWORD: "joh316"
   typo3DatabaseName: "typo3"
@@ -109,6 +109,8 @@ phpstan:analyse:
     - php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('installer.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
     - php composer-setup.php --no-ansi --install-dir=/usr/bin --filename=composer
     - php -r "unlink('composer-setup.php'); unlink('installer.sig');"
+    - composer config --no-plugins allow-plugins.typo3/cms-composer-installers true
+    - composer config --no-plugins allow-plugins.typo3/class-alias-loader true
     - composer require typo3/cms-core="${TYPO3_VERSION}"
     - composer require typo3/cms-dashboard="${TYPO3_VERSION}"
   script:
