--- a/composer.json
+++ b/composer.json
@@ -53,9 +53,9 @@
     "require-dev": {
         "typo3/testing-framework": "^6.0",
         "typo3/cms-dashboard": "^10.4 || ^11.5",
-        "friendsofphp/php-cs-fixer": "^2.14",
-        "helmich/typo3-typoscript-lint": "^2.0",
-        "overtrue/phplint": "^1.1",
+        "friendsofphp/php-cs-fixer": "^2.19 || ^3.11",
+        "helmich/typo3-typoscript-lint": "^2.5",
+        "overtrue/phplint": "^3.2 || ^4.3 || ^5.3",
         "rector/rector": "^0.11",
         "phpstan/phpstan": "^0.12.99"
     },
