--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,10 +109,16 @@ phpstan:analyse:
     - php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('installer.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
     - php composer-setup.php --no-ansi --install-dir=/usr/bin --filename=composer
     - php -r "unlink('composer-setup.php'); unlink('installer.sig');"
+    - >
+      if [[ "$TYPO3_VERSION" == "^10.4" ]]; then
+        sed -i 's/ || \^11\.5//g' composer.json
+      fi
     - composer config --no-plugins allow-plugins.typo3/cms-composer-installers true
     - composer config --no-plugins allow-plugins.typo3/class-alias-loader true
+    - composer remove --dev ssch/typo3-rector
     - composer require typo3/cms-core="${TYPO3_VERSION}"
-    - composer require typo3/cms-dashboard="${TYPO3_VERSION}"
+    - composer require typo3/cms-form="${TYPO3_VERSION}"
+    - composer require --dev typo3/cms-dashboard="${TYPO3_VERSION}"
   script:
     - >
       if [[ "$COVERAGE" == "0" ]]; then
