--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,11 @@
     },
     "config": {
         "bin-dir": ".build/bin",
-        "vendor-dir": ".build/vendor"
+        "vendor-dir": ".build/vendor",
+        "allow-plugins": {
+            "typo3/class-alias-loader": true,
+            "typo3/cms-composer-installers": true
+        }
     },
     "extra": {
         "typo3/cms": {
@@ -56,8 +60,8 @@
         "friendsofphp/php-cs-fixer": "^2.19 || ^3.11",
         "helmich/typo3-typoscript-lint": "^2.5",
         "overtrue/phplint": "^3.2 || ^4.3 || ^5.3",
-        "rector/rector": "^0.11",
-        "phpstan/phpstan": "^0.12.99"
+        "ssch/typo3-rector": "^1.0",
+        "phpstan/phpstan": "^1.8"
     },
     "scripts": {
         "test:cgl": [
