[TASK] Add Tests For PHP 8.2
Related: #410

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,6 +80,12 @@ lint:php81:
   script:
     - find . -name \*.php -exec php -l "{}" \;
 
+lint:php82:
+  stage: lint
+  image: php:8.1-alpine
+  script:
+    - find . -name \*.php -exec php -l "{}" \;
+
 phpstan:analyse:
   image: composer:2
   stage: lint
@@ -181,6 +187,14 @@ test:php81:typo3_11:
   <<: *test_php
   variables:
     DOCKER_TAG: 8.1-alpine
+    TYPO3_VERSION: ^11.5
+    COVERAGE: 0
+
+# Build in PHP 8.2 and TYPO3 11.5
+test:php82:typo3_11:
+  <<: *test_php
+  variables:
+    DOCKER_TAG: 8.2-alpine
     TYPO3_VERSION: ^11.5
     COVERAGE: 1
 
