[DOCS] Improve perceivability II
* Shorten name of manual files
* Improve home.
  * Add FAQ to navigation.
  * Improve description.
  * Decrease image size.
  * Improve title.
* Move further extensions to own page.
* Increase size of images.
* Improve feature list.
* Flatten structure of plugins

--- a/Documentation/Settings.cfg
+++ b/Documentation/Settings.cfg
@@ -1,6 +1,6 @@
 [general]
 
-project     = Shopping Cart(s) for TYPO3
+project     = Cart
 version     = 9.0
 release     = 9.0.0
 t3author    = Daniel Gohlke
