[TASK] Add JavaScript linting (#474)
* [TASK] Add JavaScript linting

Add linting for Javascript and add it to CI.

* [TASK] Improve .editorconfig

Move common rules to general rule set
which is applied to all following rules.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,20 +1,26 @@
+# EditorConfig is awesome: http://EditorConfig.org
+
+# top-most EditorConfig file
 root = true
 
-[{*.rst,*.rst.txt}]
+# Unix-style newlines with a newline ending every file
+[*]
 charset = utf-8
 end_of_line = lf
+indent_style = space
+indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
-indent_style = space
+
+# ReST-Files
+[{*.rst,*.rst.txt}]
 indent_size = 3
 max_line_length = 80
 
 # MD-Files
 [*.md]
-charset = utf-8
-end_of_line = lf
-insert_final_newline = true
-trim_trailing_whitespace = true
-indent_style = space
-indent_size = 4
 max_line_length = 80
+
+# TS/JS-Files
+[*.{ts,js}]
+indent_size = 2
