[BUGFIX] Fix CI for JS linting
The CI used the wrong command and did not run the
linting but the build process.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -46,7 +46,7 @@ jobs:
         working-directory: ./Build/Sources
 
       - name: Run ESLint
-        run: npm run build
+        run: npm run lint
         working-directory: ./Build/Sources
 
   coding-guideline:
