--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,16 +24,9 @@ stages:
   - analysis
 
 lint:cgl:
-  image: php:8.1-alpine
+  image: $CI_REGISTRY/containers/phpunit-with-php-8.1:main
   stage: lint
   before_script:
-    - apk add --no-cache bash curl git mercurial openssh openssl parallel subversion tini zlib-dev icu-dev g++
-    - docker-php-ext-install mysqli && docker-php-ext-configure intl && docker-php-ext-install intl && docker-php-ext-enable intl
-    - wget https://composer.github.io/installer.sig -O - -q | tr -d '\n' > installer.sig
-    - php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-    - php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('installer.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-    - php composer-setup.php --no-ansi --install-dir=/usr/bin --filename=composer
-    - php -r "unlink('composer-setup.php'); unlink('installer.sig');"
     - composer remove typo3/cms-core --no-update
     - composer config --no-plugins allow-plugins.sbuerk/typo3-cmscomposerinstallers-testingframework-bridge true
     - composer install --no-progress --no-ansi --no-interaction
@@ -76,16 +69,9 @@ lint:php83:
     - find . -name \*.php -exec php -l "{}" \;
 
 phpstan:analyse:
-  image: php:8.1-alpine
+  image: $CI_REGISTRY/containers/phpunit-with-php-8.1:main
   stage: lint
   before_script:
-    - apk add --no-cache bash curl git mercurial openssh openssl parallel subversion tini zlib-dev icu-dev g++
-    - docker-php-ext-install mysqli && docker-php-ext-configure intl && docker-php-ext-install intl && docker-php-ext-enable intl
-    - wget https://composer.github.io/installer.sig -O - -q | tr -d '\n' > installer.sig
-    - php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-    - php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('installer.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-    - php composer-setup.php --no-ansi --install-dir=/usr/bin --filename=composer
-    - php -r "unlink('composer-setup.php'); unlink('installer.sig');"
     - composer config platform.php 8.1
     - composer install --no-progress --no-ansi --no-interaction
   script:
@@ -95,22 +81,10 @@ phpstan:analyse:
   stage: test
   services:
   - mysql:5
-  image: php:$DOCKER_TAG
+  image: $CONTAINER_IMAGE
   only:
     - branches
   before_script:
-    - apk add --no-cache bash curl git mercurial openssh openssl parallel subversion tini zlib-dev icu-dev g++
-    - >
-      if [[ "$COVERAGE" == "1" ]]; then
-        apk add --no-cache linux-headers $PHPIZE_DEPS
-        pecl install xdebug && docker-php-ext-enable xdebug
-      fi
-    - docker-php-ext-install mysqli && docker-php-ext-configure intl && docker-php-ext-install intl && docker-php-ext-enable intl
-    - wget https://composer.github.io/installer.sig -O - -q | tr -d '\n' > installer.sig
-    - php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-    - php -r "if (hash_file('SHA384', 'composer-setup.php') === trim(file_get_contents('installer.sig'))) { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-    - php composer-setup.php --no-ansi --install-dir=/usr/bin --filename=composer
-    - php -r "unlink('composer-setup.php'); unlink('installer.sig');"
     - composer config --no-plugins allow-plugins.typo3/cms-composer-installers true
     - composer config --no-plugins allow-plugins.typo3/class-alias-loader true
     - composer config --no-plugins allow-plugins.sbuerk/typo3-cmscomposerinstallers-testingframework-bridge true
@@ -138,7 +112,7 @@ phpstan:analyse:
 test:php81:typo3_12:
   <<: *test_php
   variables:
-    DOCKER_TAG: 8.1-alpine
+    CONTAINER_IMAGE: $CI_REGISTRY/containers/phpunit-with-php-8.1:main
     TYPO3_VERSION: ^12.4
     COVERAGE: 0
 
@@ -146,7 +120,7 @@ test:php81:typo3_12:
 test:php82:typo3_12:
   <<: *test_php
   variables:
-    DOCKER_TAG: 8.2-alpine
+    CONTAINER_IMAGE: $CI_REGISTRY/containers/phpunit-with-php-8.2:main
     TYPO3_VERSION: ^12.4
     COVERAGE: 0
 
@@ -154,7 +128,7 @@ test:php82:typo3_12:
 test:php83:typo3_12:
   <<: *test_php
   variables:
-    DOCKER_TAG: 8.3-alpine
+    CONTAINER_IMAGE: $CI_REGISTRY/containers/phpunit-with-php-8.3:main
     TYPO3_VERSION: ^12.4
     COVERAGE: 1
 
