[TASK] Parse specials from TypoScript
Relates: #508

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -129,6 +129,9 @@ services:
   Extcode\Cart\Service\ShippingMethodsFromTypoScriptService:
     public: true
 
+  Extcode\Cart\Service\SpecialOptionsFromTypoScriptService:
+    public: true
+
   Extcode\Cart\Service\TaxClassService:
     public: true
 
