--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,6 @@ jobs:
     strategy:
       matrix:
         php-version:
-          - 8.1
           - 8.2
           - 8.3
     steps:
@@ -71,7 +70,7 @@ jobs:
       - name: Install PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: "8.1"
+          php-version: "8.2"
           tools: composer:v2
 
       - name: Install dependencies
@@ -87,12 +86,10 @@ jobs:
     strategy:
       matrix:
         include:
-          - php-version: '8.1'
-            typo3-version: '^12.4'
           - php-version: '8.2'
-            typo3-version: '^12.4'
+            typo3-version: '^13.2'
           - php-version: '8.3'
-            typo3-version: '^12.4'
+            typo3-version: '^13.2'
     steps:
       - uses: actions/checkout@v4
 
@@ -104,7 +101,9 @@ jobs:
 
       - name: Install dependencies with expected TYPO3 version
         run: |-
-          composer require --no-interaction --prefer-dist --no-progress "typo3/cms-core:${{ matrix.typo3-version }}" "typo3/cms-extbase:${{ matrix.typo3-version }}" "typo3/cms-frontend:${{ matrix.typo3-version }}"
+          composer remove --dev ssch/typo3-rector \
+          && composer require typo3/cms-install "*" \
+          && composer install --no-progress --no-ansi --no-interaction
 
       - name: Code Quality (by PHPStan)
         run: .build/bin/phpstan analyse -c Build/phpstan.neon
@@ -121,17 +120,11 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-unstable
 
-      - name: Run Unit Tests PHP8.1
-        run: nix-shell --pure --run project-test-unit
-
       - name: Run Unit Tests PHP8.2
         run: nix-shell --arg phpVersion \"php82\" --pure --run project-test-unit
 
       - name: Run Unit Tests PHP8.3
         run: nix-shell --arg phpVersion \"php83\" --pure --run project-test-unit
-
-      - name: Run Functional Tests PHP8.1
-        run: nix-shell --pure --run project-test-functional
 
       - name: Run Functional Tests PHP8.2
         run: nix-shell --arg phpVersion \"php82\" --pure --run project-test-functional
