--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ stages:
   - analysis
 
 lint:cgl:
-  image: $CI_REGISTRY/containers/phpunit-with-php-8.1:main
+  image: $CI_REGISTRY/containers/phpunit-with-php-8.2:main
   stage: lint
   before_script:
     - composer remove typo3/cms-core --no-update
@@ -54,13 +54,7 @@ lint:yaml:
   stage: lint
   image: $CONTAINER_IMAGE
   script:
-    - find *.php Classes Configuration Tests -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l
-
-lint:php81:
-  <<: *lint_php
-  stage: lint
-  variables:
-    CONTAINER_IMAGE: php:8.1-alpine
+    - find *.php Classes Configuration Tests
 
 lint:php82:
   <<: *lint_php
@@ -73,10 +67,12 @@ lint:php83:
     CONTAINER_IMAGE: php:8.3-alpine
 
 phpstan:analyse:
-  image: $CI_REGISTRY/containers/phpunit-with-php-8.1:main
+  image: $CI_REGISTRY/containers/phpunit-with-php-8.2:main
   stage: lint
   before_script:
-    - composer config platform.php 8.1
+    - composer config platform.php 8.2
+    - composer remove --dev ssch/typo3-rector
+    - composer require typo3/cms-install "*"
     - composer install --no-progress --no-ansi --no-interaction
   script:
     - .build/bin/phpstan analyse -c Build/phpstan.neon --memory-limit 256M
@@ -112,28 +108,20 @@ phpstan:analyse:
     expire_in: 1 day
     when: always
 
-# Build in PHP 8.1 and TYPO3 12.4
-test:php81:typo3_12:
-  <<: *test_php
-  variables:
-    CONTAINER_IMAGE: $CI_REGISTRY/containers/phpunit-with-php-8.1:main
-    TYPO3_VERSION: ^12.4
-    COVERAGE: 0
-
-# Build in PHP 8.2 and TYPO3 12.4
-test:php82:typo3_12:
+# Build in PHP 8.2 and TYPO3 13.3
+test:php82:typo3_13:
   <<: *test_php
   variables:
     CONTAINER_IMAGE: $CI_REGISTRY/containers/phpunit-with-php-8.2:main
-    TYPO3_VERSION: ^12.4
+    TYPO3_VERSION: ^13.3
     COVERAGE: 0
 
-# Build in PHP 8.3 and TYPO3 12.4
-test:php83:typo3_12:
+# Build in PHP 8.3 and TYPO3 13.2
+test:php83:typo3_13:
   <<: *test_php
   variables:
     CONTAINER_IMAGE: $CI_REGISTRY/containers/phpunit-with-php-8.3:main
-    TYPO3_VERSION: ^12.4
+    TYPO3_VERSION: ^13.3
     COVERAGE: 1
 
 documentation:
@@ -163,7 +151,7 @@ sonarqube:
     SONAR_SOURCES: "./Classes"
     SONAR_GITLAB_PROJECT_ID: "$CI_PROJECT_ID"
   script:
-    - echo "sonar.projectKey=cart-9.x" > sonar-project.properties
+    - echo "sonar.projectKey=cart-10.x" > sonar-project.properties
     - gitlab-sonar-scanner -Dsonar.php.coverage.reportPath=phpunit.coverage.xml -Dsonar.php.tests.reportPath=phpunit.report.xml
   allow_failure: true
 
@@ -179,5 +167,5 @@ sonarqube-reports:
     SONAR_SOURCES: "./Classes"
     SONAR_TESTS: "./Tests"
   script:
-    - echo "sonar.projectKey=cart-9.x" > sonar-project.properties
+    - echo "sonar.projectKey=cart-10.x" > sonar-project.properties
     - gitlab-sonar-scanner -Dsonar.php.coverage.reportPath=phpunit.coverage.xml -Dsonar.php.tests.reportPath=phpunit.report.xml
