[TASK] Replace phplint and streamline testing

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
 .build
 composer.lock
 
-.php_cs.cache
-.phplint.cache
+.php-cs-fixer.cache
 Build/.phpunit.cache
 
-Documentation/_make
 Documentation-GENERATED-temp/
 
 .DS_Store
