--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,11 @@
 /.github/ export-ignore
 /Build/ export-ignore
 /Tests/ export-ignore
+/.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitlab-ci.yml export-ignore
+/composer.json export-ignore
+/crowdin.yml export-ignore
+/Makefile export-ignore
+/rector.php export-ignore
+/shell.nix export-ignore
