[BUGFIX] Add tests and fixes for PHP 8.4
Relates: #611

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,7 @@ jobs:
           - 8.1
           - 8.2
           - 8.3
+          - 8.4
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -93,6 +94,8 @@ jobs:
             typo3-version: '^12.4'
           - php-version: '8.3'
             typo3-version: '^12.4'
+          - php-version: '8.4'
+            typo3-version: '^12.4'
     steps:
       - uses: actions/checkout@v4
 
@@ -130,6 +133,9 @@ jobs:
       - name: Run Unit Tests PHP8.3
         run: nix-shell --arg phpVersion \"php83\" --pure --run project-test-unit
 
+      - name: Run Unit Tests PHP8.4
+        run: nix-shell --arg phpVersion \"php84\" --pure --run project-test-unit
+
       - name: Run Functional Tests PHP8.1
         run: nix-shell --pure --run project-test-functional
 
@@ -138,4 +144,7 @@ jobs:
 
       - name: Run Functional Tests PHP8.3
         run: nix-shell --arg phpVersion \"php83\" --pure --run project-test-functional
+
+      - name: Run Functional Tests PHP8.4
+        run: nix-shell --arg phpVersion \"php84\" --pure --run project-test-functional
 
