--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,6 +71,11 @@ lint:php83:
   variables:
     CONTAINER_IMAGE: php:8.3-alpine
 
+lint:php84:
+  <<: *lint_php
+  variables:
+    CONTAINER_IMAGE: php:8.4-alpine
+
 phpstan:analyse:
   image: $CI_REGISTRY/containers/phpunit-with-php-8.1:main
   stage: lint
@@ -117,6 +122,13 @@ test:php83:typo3_12:
   <<: *test_php
   variables:
     CONTAINER_IMAGE: $CI_REGISTRY/containers/phpunit-with-php-8.3:main
+    TYPO3_VERSION: ^12.4
+
+# Build in PHP 8.4 and TYPO3 12.4
+test:php84:typo3_12:
+  <<: *test_php
+  variables:
+    CONTAINER_IMAGE: $CI_REGISTRY/containers/phpunit-with-php-8.4:main
     TYPO3_VERSION: ^12.4
 
 documentation:
