--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         }
     },
     "require": {
-        "php": "^8.2",
+        "php": "~8.2.0 || ~8.3.0 || ~8.4.0",
         "ext-json": "*",
         "ext-openssl": "*",
         "typo3/cms-core": "^13.4",
