--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -136,6 +136,10 @@ services:
         identifier: 'cart--order--update--log-service-update'
         event: Extcode\Cart\Event\Order\UpdateServiceEvent
 
+  Extcode\Cart\Service\CurrencyTranslationServiceInterface:
+    alias: Extcode\Cart\Service\CurrencyTranslationService
+    public: true
+
   Extcode\Cart\Service\PaymentMethodsFromTypoScriptService:
     public: true
 
